...
    "About" : {

    },
    "Access exclusive posts and content from creators you support on Patreon." : {

    },
    "Account" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cuenta"
          }
...
    "By creating an account or using Arkavo (\"App\"), you agree to be bound by this End User License Agreement (\"EULA\"). If you do not agree to these terms, you must not use the App." : {

    },
    "By using Arkavo, you agree to abide by these terms and help maintain a safe and respectful community." : {

    },
    "Cancel" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
          }
...
      "comment" : "A label displayed above the list of communication channels for a contact.",
      "isCommentAutoGenerated" : true
    },
    "Connect" : {

    },
    "Connect Nearby" : {

    },
    "Connect to a Network" : {
      "comment" : "A title for the prompt that encourages users to connect to a network.",
      "isCommentAutoGenerated" : true
    },
...
      "comment" : "A description of the benefit of connecting to the internet.",
      "isCommentAutoGenerated" : true
    },
    "Connect with %@?" : {

    },
    "Connect with Others" : {

    },
    "Connect with someone next to you" : {
      "comment" : "A description for the \"Find Nearby\" button in the \"Add People\" section of the \"New Conversation\" view.",
      "isCommentAutoGenerated" : true
    },
    "Connected" : {

    },
    "Connected %@" : {

    },
    "Connected Accounts" : {

    },
    "Connected Peers" : {

    },
    "Connecting to live stream..." : {
...
    "Connection Error" : {

    },
    "Connection Failed" : {

    },
    "Contact Details" : {

    },
    "Contact Support" : {

    },
    "Content" : {
...
    "Debug" : {

    },
    "Debug Info" : {

    },
    "Delete" : {

    },
    "Delete Account" : {

    },
    "Delete Conversation?" : {
...
    "Discovering edge agents..." : {

    },
    "Dismiss" : {

    },
    "Done" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
          }
...
    "Interaction: %@" : {

    },
    "Invite Friends" : {

    },
    "Invite Remotely" : {

    },
    "Invite via Link" : {

    },
    "Key Points" : {
...
    "Make sure the other person has Arkavo open and is also searching for connections." : {

    },
    "Make sure this is the person you want to connect with. They will receive a connection request." : {

    },
    "Manage Connected Accounts" : {

    },
    "Manual Connection" : {

    },
    "Map" : {
...

    },
    "Model" : {
      "comment" : "A label displayed above the model of the contact.",
      "isCommentAutoGenerated" : true
    },
    "More Options" : {

    },
    "Mount device on stand facing you" : {

    },
    "My Account" : {
...
    "Network" : {

    },
    "Network Connections" : {

    },
    "NEW" : {
      "comment" : "A label indicating that there is a new notification.",
      "isCommentAutoGenerated" : true
    },
    "New Chat" : {
      "comment" : "A label for starting a new conversation.",
      "isCommentAutoGenerated" : true
...
    "Next" : {

    },
    "No Active Chats" : {

    },
    "No Active Memberships" : {
      "comment" : "A message displayed when a user has no active Patreon memberships.",
      "isCommentAutoGenerated" : true
    },
    "No additional properties" : {

    },
...
    "Not available" : {

    },
    "Not available on macOS" : {

    },
    "Not connected" : {

    },
    "Not Connected" : {

    },
    "Offline" : {
...
    "Privacy Policy" : {

    },
    "Processing..." : {

    },
    "Profile" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
          }
...
      "comment" : "A description of the ongoing discovery process.",
      "isCommentAutoGenerated" : true
    },
    "Searching for devices..." : {

    },
    "Searching for nearby devices..." : {

    },
    "Section" : {

    },
    "Secure Connections" : {

    },
    "Send" : {

    },
    "Send Message" : {

    },
    "Send your Arkavo link with the iOS Share Sheet to connect with someone you already know—no matter the distance." : {

    },
    "server.example.com" : {
      "comment" : "A placeholder text for the custom server domain input field.",
      "isCommentAutoGenerated" : true
    },
    "Session %@..." : {

    },
    "Settings" : {

    },
    "Share" : {
      "localizations" : {
        "es-US" : {
          "stringUnit" : {
...
    "Support features will be available in an upcoming update." : {

    },
    "Support Tiers" : {

    },
    "Supported Creators" : {
      "comment" : "A title for a section in the \"Connected Accounts\" view that lists creators the user supports on Patreon.",
      "isCommentAutoGenerated" : true
    },
    "Tap 'Discover Peers' to find nearby devices." : {

    },
...
